--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,103 +1,29 @@
-<div class="footer">
+ <div class="footer">
     <div class="row w-100 row-cols-1 row-cols-lg-2 py-2 px-3">
         <div class="col px-5 align-content-between">
-            <h4>Contacto</h4>
-            <div class="d-flex justify-content-start gap-5 py-1">
-                <a
-                    href="https://wa.me/593991125207?text=Hola%2C%20%C2%BFMe%20ayuda%20en%20la%20compra%20de%20un%20repuesto%3F">
-                    <mat-icon>call</mat-icon>
-                </a>
-                <span>+593 9999 00 223</span>
-            </div>
-            <div class="d-flex justify-content-start gap-5 py-1">
-                <a href="mailto:ventas@autosvip.net">
-                    <mat-icon>mail</mat-icon>
-                </a>
-                <span>ventas@autosvip.net</span>
-            </div>
-            <div class="d-flex justify-content-start gap-5 py-1">
-                <a href="">
-                    <mat-icon>location_pin</mat-icon>
-                </a>
-                <div class="text-start">
-                    <span><b>Guayaquil:</b> Miguel H. Alcivar 723 y Orellana</span><br>
-                    <span><b>Quito:</b> Mariscal Sucre y El Reventador (El Condado)</span>
-                </div>
-            </div><br>
-            <div class="d-flex justify-content-between pt-1">
-                <a href="https://autosvip.net" title="Home" rel="Home">
-                    <img style="height: 50px; width: auto;"
-                        src="../../../assets/img/porsche.png" alt="Home">
-                </a>
-                <a href="https://autosvip.net" title="Home" rel="Home">
-                    <img style="height: 45px; width: auto;"
-                        src="../../../assets/img/audi.png" alt="Home">
-                </a>
-                <a href="https://autosvip.net" title="Home" rel="Home">
-                    <img style="height: 40px; width: auto;"
-                        src="../../../assets/img/mercedes.png" alt="Home">
-                </a>
-                <a href="https://autosvip.net" title="Home" rel="Home">
-                    <img style="height: 35px; width: auto;"
-                        src="../../../assets/img/mini.png" alt="Home">
-                </a>
-                <a href="https://autosvip.net" title="Home" rel="Home">
-                    <img style="height: 45px; width: auto;"
-                        src="../../../assets/img/bmw.png" alt="Home">
-                </a>
-            </div><br>
+            <p>AUTOSVIP es una marca de Corporación ZEN210</p>
+            <p>Whatsapp +593 9999 00 22 3</p>
+            <p>Correo: ventas@autosvip.net</p>
+            <p>AV. Mariscal Sucre y Reventador (El Condado-Quito-Ecuador)</p>
         </div>
-        <div class="col px-5 align-content-between">
-            <h4>Formas de pago</h4>
-            <div class="row row-cols-1 row-cols-sm-2 py-1">
-                <div style="width: 200px; margin: 0 auto;">
-                    <img width="100%" src="../../../assets/img/banco-pichincha.svg" alt="">
-                </div>
-                <span style="width: auto;"> 2202717783 <br>(suma puntos para sorteo de mantenimiento)</span>
-            </div><br>
-            <div class="row row-cols-1 row-cols-lg-2 py-1">
-                <div style="width: 200px; margin: 0 auto;">
-                    <img width="100%" src="../../../assets/img/Banco_Guayakill_logo.png" alt="">
-                </div>
-                <span style="width: auto;"> 4268062 <br>(suma puntos para sorteo de mantenimiento)</span>
-            </div><br>
-            <!--<div>
-                <button class="w-100" mat-raised-button
-                    style="background-color: #ff7300; height: 50px; color: white; font-size: 19px;">
-                    <img width="35px" src="../../../assets/img/payPhoneLogo.svg" alt=""> &nbsp; PAYPHONE
-                </button>
-            </div><br>-->
-            <div>
-                <button class="w-100" mat-raised-button
-                    style="background-color: rgb(0,169,143); height: 50px; color: white; font-size: 19px;">
-                    <img width="30px" src="../../../assets/img/datafast-logo-actual.svg" alt=""> &nbsp; DATAFAST
-                </button>
-            </div>
-        </div>
-    </div>
-    <div class="row w-100 footer-copy row-cols-1 row-cols-lg-2 px-3">
-        <div class="col px-3 text-center">
-            <span>© Copyright 2023–Autos VIP–Todos los derechos reservados.</span>
-        </div>
-        <div class="col d-flex justify-content-end">
-            <div class="col">
-                <a href="#" target="_blank" class="text-white">
-                    <i class="fab fa-twitter h3"></i>
+        <div class="col px-5 align-content-between py-1">
+            <div class="d-flex justify-content-around py-1">
+                <a href="https://autosvip.net">
+                    <img class="imgLarga" src="../../../assets/img/footer/bmw.png">
+                </a>
+                <a href="https://autosvip.net" >
+                    <img class="imgLarga" src="../../../assets/img/footer/mercedes.png">
+                </a>
+                <a href="https://autosvip.net" >
+                    <img class="imgLarga" src="../../../assets/img/footer/porsche.png">
                 </a>
             </div>
-            <div class="col">
-                <a href="#" target="_blank" class="text-white">
-                    <i class="fab fa-facebook-square h3"></i>
+            <div class="d-flex justify-content-around py-1">
+                <a href="https://autosvip.net">
+                    <img class="imgAncha" src="../../../assets/img/footer/mini.png">
                 </a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank" class="text-white">
-                    <i class="fab fa-pinterest h3"></i>
-                </a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank" class="text-white">
-                    <i class="fab fa-instagram h3"></i>
+                <a href="https://autosvip.net" title="Home" rel="Home">
+                    <img class="imgAncha" src="../../../assets/img/footer/audi.png">
                 </a>
             </div>
         </div>
